--- a/datacollection/error/frontend/package.json
+++ b/datacollection/error/frontend/package.json
@@ -11,6 +11,7 @@
     "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-smart-scroller": "^1.1.22",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
