Why: * Major Changes - Add recipes with maximum number of actions.
This change addresses the need by:
*

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ dmypy.json
 !/Annotations/recipe_extraction/output/recipes_with_actions.pkl
 !/Annotations/recipe_extraction/output/actions_in_recipes.pkl
 !/Annotations/recipe_extraction/output/recipes_for_actions.pkl
+!/Annotations/recipe_extraction/output/top_50_recipes.csv
