Why: * Minor Changes Add more recipes (with 5,7 and 10 actions)
This change addresses the need by:
*

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,6 @@ dmypy.json
 !/Annotations/recipe_extraction/output/recipes_with_max_40_actions.csv
 
 !/Annotations/recipe_extraction/output/recipes_with_max_50_actions.csv
+!/Annotations/recipe_extraction/output/recipes_with_max_5_actions.csv
+
+!/Annotations/recipe_extraction/output/recipes_with_max_7_actions.csv
