--- a/datacollection/user_app/backend/info_files/activities.yaml
+++ b/datacollection/user_app/backend/info_files/activities.yaml
@@ -106,20 +106,32 @@
       description: "Microwave for 1 more minute."
   mistake_hints:
     - 0:
-      tag: Preparation Mistake
-      description: "Not washing the carrot before cutting it."
+      tag: Missing Step
+      description: "Not cutting the carrot as directed or cutting too thick or too long strips."
     - 1:
-      tag: Measurement Mistake
-      description: "Cutting the onion into two pieces instead of slicing 1/8 of it."
+      tag: Missing Step
+      description: "Not peeling the onion or cutting it into more than two pieces."
     - 2:
-      tag: Preparation Mistake
-      description: "Mincing the entire garlic clove instead of just 1/8 of it."
+      tag: Missing Step
+      description: "Not slicing the onion or slicing it too thick or too thin."
     - 3:
       tag: Technique Mistake
-      description: "Not specifying to use a microwave-safe cover."
+      description: "Cutting and mincing the garlic clove incorrectly or not mincing it finely enough."
     - 4:
-      tag: Temp Mistake
-      description: "Possible overcooking due to microwaving for a total of 10 minutes."
+      tag: Missing Step
+      description: "Not using the correct amount of meatballs or using a dish that is not microwave-safe."
+    - 5:
+      tag: Order Mistake
+      description: "Adding the ingredients in the wrong order or not evenly distributing them."
+    - 6:
+      tag: Measurement Mistake
+      description: "Not measuring the ingredients correctly or using the wrong amount of sauce."
+    - 7:
+      tag: Timing Mistake
+      description: "Overcooking or undercooking the meatballs or not cooking them for the correct amount of time."
+    - 8:
+      tag: Technique Mistake
+      description: "Not stirring the contents properly or using the wrong utensil."
   required_items:
     - 0: "1 medium carrot"
     - 1: "1 medium onion"
@@ -159,47 +171,38 @@
       description: "Microwave for 1 minute 20 seconds, or until it rises and the toppings are bubbling."
   mistake_hints:
     - 0:
-      tag: Preparation Mistake
-      description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
+      tag: Temperature Mistake
+      description: "Not using a microwave-safe mug."
     - 1:
-      tag: TIme Mistake
-      description: "Missing some spots while coating the ramekin, which could also lead to the egg sticking."
+      tag: Measurement Mistake
+      description: "Not measuring the flour correctly or using the wrong amount."
     - 2:
-      tag: Tool Mistake
-      description: "Breaking the egg yolk accidentally, which could affect the desired texture of the final dish."
+      tag: Measurement Mistake
+      description: "Not measuring the baking powder correctly or using the wrong amount."
     - 3:
-      tag: Other Mistake
-      description: "Getting eggshell pieces in the ramekin cup, which would be unpleasant to eat."
+      tag: Measurement Mistake
+      description: "Not measuring the baking soda correctly or using the wrong amount."
     - 4:
-      tag: Temp Mistake
-      description: "Overcooking or under cooking the egg, which could result in an undesirable texture or even food safety concerns."
+      tag: Measurement Mistake
+      description: "Not measuring the salt correctly or using the wrong amount."
     - 5:
-      tag: Object Mistake
-      description: "Forgetting to stir the egg after 30 seconds, which could lead to uneven cooking."
+      tag: Technique Mistake
+      description: "Not stirring the contents properly or not using the correct utensil."
     - 6:
-      tag: time Mistake
-      description: "Using too much or too little salsa or cheese, which could affect the overall taste and balance of flavors."
+      tag: Technique Mistake
+      description: "Not mixing the ingredients properly or using the wrong utensil."
     - 7:
-      tag: place Mistake
-      description: "Choosing the wrong type of salsa or cheese, which could change the intended flavor profile."
+      tag: Order Mistake
+      description: "Adding the sauce in the wrong order or not spreading it evenly."
     - 8:
-      tag: order Mistake
-      description: "Over-microwaving, which could cause the cheese to overcook or the dish to become too hot."
+      tag: Measurement Mistake
+      description: "Not measuring the cheese correctly or using the wrong amount."
     - 9:
-      tag: Preparation Mistake
-      description: "Under-microwaving, resulting in only partially melted cheese."
+      tag: Measurement Mistake
+      description: "Not measuring the herbs correctly or using the wrong amount."
     - 10:
-      tag: Preparation Mistake
-      description: "Cutting the English muffin unevenly, leading to an unstable sandwich."
-    - 11:
-      tag: TIme Mistake
-      description: "Over-toasting or under-toasting the English muffin, which could affect the taste and texture."
-    - 12:
       tag: Timing Mistake
-      description: "Placing too much or too little lettuce, which could alter the intended balance of flavors and textures."
-    - 13:
-      tag: Preparation Mistake
-      description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
+      description: "Overcooking or undercooking the dish or not cooking it for the correct amount of time."
   required_items:
     - 0: "4 tbsp flour"
     - 1: "1/8 tsp baking powder"
@@ -239,47 +242,35 @@
       description: "Stir noodles with a spoon or fork until the flavouring dissolves."
   mistake_hints:
     - 0:
-      tag: Preparation Mistake
-      description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
+      tag: Missing Step
+      description: "Not breaking the noodles or keeping them as a block as directed."
     - 1:
-      tag: TIme Mistake
-      description: "Missing some spots while coating the ramekin, which could also lead to the egg sticking."
+      tag: Technique Mistake
+      description: "Not chopping the garlic clove correctly or not mincing it finely enough."
     - 2:
-      tag: Tool Mistake
-      description: "Breaking the egg yolk accidentally, which could affect the desired texture of the final dish."
+      tag: Technique Mistake
+      description: "Not slicing the onion correctly or not cutting it into pieces of the correct size."
     - 3:
-      tag: Other Mistake
-      description: "Getting eggshell pieces in the ramekin cup, which would be unpleasant to eat."
+      tag: Preparation Mistake
+      description: "Not washing or preparing the vegetables correctly."
     - 4:
-      tag: Temp Mistake
-      description: "Overcooking or under cooking the egg, which could result in an undesirable texture or even food safety concerns."
+      tag: Measurement Mistake
+      description: "Not adding the correct amount of water or adding too much water."
     - 5:
-      tag: Object Mistake
-      description: "Forgetting to stir the egg after 30 seconds, which could lead to uneven cooking."
-    - 6:
-      tag: time Mistake
-      description: "Using too much or too little salsa or cheese, which could affect the overall taste and balance of flavors."
-    - 7:
-      tag: place Mistake
-      description: "Choosing the wrong type of salsa or cheese, which could change the intended flavor profile."
-    - 8:
-      tag: order Mistake
-      description: "Over-microwaving, which could cause the cheese to overcook or the dish to become too hot."
-    - 9:
-      tag: Preparation Mistake
-      description: "Under-microwaving, resulting in only partially melted cheese."
-    - 10:
-      tag: Preparation Mistake
-      description: "Cutting the English muffin unevenly, leading to an unstable sandwich."
-    - 11:
-      tag: TIme Mistake
-      description: "Over-toasting or under-toasting the English muffin, which could affect the taste and texture."
-    - 12:
       tag: Timing Mistake
-      description: "Placing too much or too little lettuce, which could alter the intended balance of flavors and textures."
-    - 13:
-      tag: Preparation Mistake
-      description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
+      description: "Overcooking or undercooking the noodles or not cooking them for the correct amount of time."
+    - 6:
+      tag: Missing Step
+      description: "Not adding the herbs or adding the wrong herbs."
+    - 7:
+      tag: Timing Mistake
+      description: "Not allowing the noodles to sit for the correct amount of time or letting them sit for too long."
+    - 8:
+      tag: Order Mistake
+      description: "Not adding the flavour packet at the correct time or in the correct order."
+    - 9:
+      tag: Technique Mistake
+      description: "Not stirring the noodles properly or using the wrong utensil."
   required_items:
     - 0: "1 ramen noodle packet"
     - 1: "1 garlic clove"
@@ -325,47 +316,50 @@
       description: "Discard the paper filter and coffee grounds."
   mistake_hints:
     - 0:
-      tag: Preparation Mistake
-      description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
+      tag: Measurement Mistake
+      description: "Not measuring the water correctly or using the wrong amount of water."
     - 1:
-      tag: TIme Mistake
-      description: "Missing some spots while coating the ramekin, which could also lead to the egg sticking."
-    - 2:
-      tag: Tool Mistake
-      description: "Breaking the egg yolk accidentally, which could affect the desired texture of the final dish."
-    - 3:
-      tag: Other Mistake
-      description: "Getting eggshell pieces in the ramekin cup, which would be unpleasant to eat."
-    - 4:
-      tag: Temp Mistake
-      description: "Overcooking or under cooking the egg, which could result in an undesirable texture or even food safety concerns."
-    - 5:
-      tag: Object Mistake
-      description: "Forgetting to stir the egg after 30 seconds, which could lead to uneven cooking."
-    - 6:
-      tag: time Mistake
-      description: "Using too much or too little salsa or cheese, which could affect the overall taste and balance of flavors."
-    - 7:
-      tag: place Mistake
-      description: "Choosing the wrong type of salsa or cheese, which could change the intended flavor profile."
-    - 8:
-      tag: order Mistake
-      description: "Over-microwaving, which could cause the cheese to overcook or the dish to become too hot."
-    - 9:
-      tag: Preparation Mistake
-      description: "Under-microwaving, resulting in only partially melted cheese."
-    - 10:
-      tag: Preparation Mistake
-      description: "Cutting the English muffin unevenly, leading to an unstable sandwich."
-    - 11:
-      tag: TIme Mistake
-      description: "Over-toasting or under-toasting the English muffin, which could affect the taste and texture."
-    - 12:
       tag: Timing Mistake
-      description: "Placing too much or too little lettuce, which could alter the intended balance of flavors and textures."
-    - 13:
-      tag: Preparation Mistake
-      description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
+      description: "Overboiling or underboiling the water or not boiling it for the correct amount of time"
+    - 2:
+      tag: Order Mistake
+      description: "Not assembling the filter cone at the correct time or in the correct order."
+    - 3:
+      tag: Technique Mistake
+      description: "Not placing the dripper correctly or using the wrong mug."
+    - 4:
+      tag: Technique Mistake
+      description: "Not folding the paper filter correctly or using the wrong type of filter."
+    - 5:
+      tag: Technique Mistake
+      description: "Not placing the filter correctly or not spreading it open properly."
+    - 6: Measurement Mistake
+      tag:
+      description: "Not measuring the coffee beans correctly or using the wrong amount."
+    - 7:
+      tag: Technique Mistake
+      description: "Not grinding the coffee beans correctly or grinding them for too long or too short a time."
+    - 8:
+      tag: Technique Mistake
+      description: "Not transferring the grounds correctly or spilling them."
+    - 9:
+      tag: Temperature Mistake
+      description: "Not checking the temperature of the water or using water that is too hot or too cold."
+    - 10:
+      tag: Technique Mistake
+      description: "Pouring too much or too little water or not pouring it correctly."
+    - 11:
+      tag: Timing Mistake
+      description: "Not waiting for the coffee to bloom for the correct amount of time or waiting for too long."
+    - 12:
+      tag: Technique Mistake
+      description: "Pouring the water too quickly or not pouring it in a circular motion."
+    - 13: Timing Mistake
+      tag:
+      description: "Removing the dripper too soon or not letting the coffee drain completely."
+    - 14:
+      tag: Missing Step
+      description: "Forgetting to discard the paper filter and coffee grounds or discarding them incorrectly."
   required_items:
     - 0: "12 ounces water"
     - 1: "1 filter cone"
@@ -404,46 +398,31 @@
   mistake_hints:
     - 0:
       tag: Preparation Mistake
-      description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
+      description: "Not softening the butter or not measuring the ingredients correctly."
     - 1:
-      tag: Time Mistake
-      description: "Missing some spots while coating the ramekin, which could also lead to the egg sticking."
+      tag: Measurement Mistake
+      description: "Not measuring the ingredients correctly or using the wrong amount."
     - 2:
-      tag: Tool Mistake
-      description: "Breaking the egg yolk accidentally, which could affect the desired texture of the final dish."
+      tag: Technique Mistake
+      description: "Not mixing the crumble mixture properly or using the wrong utensil."
     - 3:
-      tag: Other Mistake
-      description: "Getting eggshell pieces in the ramekin cup, which would be unpleasant to eat."
+      tag: Technique Mistake
+      description: "Not spraying the oil evenly or using the wrong type of oil."
     - 4:
-      tag: Temp Mistake
-      description: "Overcooking or under cooking the egg, which could result in an undesirable texture or even food safety concerns."
+      tag: Technique Mistake
+      description: "Not flattening the crumble mixture evenly or not microwaving it for the correct amount of time."
     - 5:
-      tag: Object Mistake
-      description: "Forgetting to stir the egg after 30 seconds, which could lead to uneven cooking."
+      tag: Preparation Mistake
+      description: "Not coring the apple correctly or not slicing it into thin slices."
     - 6:
-      tag: time Mistake
-      description: "Using too much or too little salsa or cheese, which could affect the overall taste and balance of flavors."
+      tag: Measurement Mistake
+      description: "Not measuring the brown sugar correctly or using the wrong amount."
     - 7:
-      tag: place Mistake
-      description: "Choosing the wrong type of salsa or cheese, which could change the intended flavor profile."
+      tag: Order Mistake
+      description: "Not adding the crumble mixture at the correct time or in the correct order."
     - 8:
-      tag: order Mistake
-      description: "Over-microwaving, which could cause the cheese to overcook or the dish to become too hot."
-    - 9:
-      tag: Preparation Mistake
-      description: "Under-microwaving, resulting in only partially melted cheese."
-    - 10:
-      tag: Preparation Mistake
-      description: "Cutting the English muffin unevenly, leading to an unstable sandwich."
-    - 11:
-      tag: Time Mistake
-      description: "Over-toasting or under-toasting the English muffin, which could affect the taste and texture."
-    - 12:
       tag: Timing Mistake
-      description: "Placing too much or too little lettuce, which could alter the intended balance of flavors and textures."
-    - 13:
-      tag: Preparation Mistake
-      description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
+      description: "Overcooking or undercooking the crumble or not microwaving it for the correct amount of time."
   required_items:
     - 0: "1 tbsp softened butter"
     - 1: "1 tbsp white sugar"
@@ -453,7 +432,6 @@
     - 5: "4 dashes cinnamon"
     - 6: "cooking spray"
     - 7: "1 apple"
-
 - id: 7
   name: "Breakfast Burritos"
   category: "Non-Veg"
@@ -486,19 +464,31 @@
   mistake_hints:
     - 0:
       tag: Preparation Mistake
-      description: "Not washing the carrot before cutting it."
+      description: "Not cracking the egg correctly or adding any eggshells to the bowl."
     - 1:
-      tag: Measurement Mistake
-      description: "Cutting the onion into two pieces instead of slicing 1/8 of it."
+      tag: Timing Mistake
+      description: "Overcooking or undercooking the egg or not microwaving it for the correct amount of time."
     - 2:
-      tag: Preparation Mistake
-      description: "Mincing the entire garlic clove instead of just 1/8 of it."
+      tag: Measurement Mistake
+      description: "Not measuring the ingredients correctly or using the wrong amount."
     - 3:
       tag: Technique Mistake
-      description: "Not specifying to use a microwave-safe cover."
+      description: "Not mixing the ingredients properly or using the wrong utensil."
     - 4:
-      tag: Temp Mistake
-      description: "Possible overcooking due to microwaving for a total of 10 minutes."
+      tag: Technique Mistake
+      description: "Not placing the tortilla correctly or using the wrong type of tortilla."
+    - 5:
+      tag: Order Mistake
+      description: "Not pouring the egg mixture at the correct time or in the correct order."
+    - 6:
+      tag: Measurement Mistake
+      description: "Not measuring the cheese correctly or using the wrong amount."
+    - 7:
+      tag: Technique Mistake
+      description: "Not rolling the tortilla evenly or tightly enough or rolling it too tightly."
+    - 8:
+      tag: Technique Mistake
+      description: "Not rolling the tortilla correctly or not sealing it properly."
   required_items:
     - 0: "1 egg"
     - 1: "1 tbsp salsa"
