--- a/datacollection/user_app/backend/info_files/activities.yaml
+++ b/datacollection/user_app/backend/info_files/activities.yaml
@@ -807,47 +807,35 @@
       description: "Mix the contents of the bowl well."
   mistake_hints:
     - 0:
-      tag: Preparation Mistake
-      description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
+      tag: Measurement Mistake
+      description: "The person might measure more or less than 2 cups of frozen corn."
     - 1:
-      tag: TIme Mistake
-      description: "Missing some spots while coating the ramekin, which could also lead to the egg sticking."
+      tag: Technique Mistake
+      description: "The person might not run the frozen corn under cold water for long enough to fully thaw it."
     - 2:
-      tag: Tool Mistake
-      description: "Breaking the egg yolk accidentally, which could affect the desired texture of the final dish."
+      tag: Temperature Mistake
+      description: "The person might not use a microwave-safe bowl, which could cause it to break in the microwave."
     - 3:
-      tag: Other Mistake
-      description: "Getting eggshell pieces in the ramekin cup, which would be unpleasant to eat."
-    - 4:
-      tag: Temp Mistake
-      description: "Overcooking or under cooking the egg, which could result in an undesirable texture or even food safety concerns."
-    - 5:
-      tag: Object Mistake
-      description: "Forgetting to stir the egg after 30 seconds, which could lead to uneven cooking."
-    - 6:
-      tag: time Mistake
-      description: "Using too much or too little salsa or cheese, which could affect the overall taste and balance of flavors."
-    - 7:
-      tag: place Mistake
-      description: "Choosing the wrong type of salsa or cheese, which could change the intended flavor profile."
-    - 8:
-      tag: order Mistake
-      description: "Over-microwaving, which could cause the cheese to overcook or the dish to become too hot."
-    - 9:
-      tag: Preparation Mistake
-      description: "Under-microwaving, resulting in only partially melted cheese."
-    - 10:
-      tag: Preparation Mistake
-      description: "Cutting the English muffin unevenly, leading to an unstable sandwich."
-    - 11:
-      tag: TIme Mistake
-      description: "Over-toasting or under-toasting the English muffin, which could affect the taste and texture."
-    - 12:
       tag: Timing Mistake
-      description: "Placing too much or too little lettuce, which could alter the intended balance of flavors and textures."
-    - 13:
-      tag: Preparation Mistake
-      description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
+      description: "The person might microwave the corn for too long or too little, which could result in overcooked or undercooked corn."
+    - 4:
+      tag: Measurement Mistake
+      description: "The person might add more or less than 1 teaspoon of butter and/or pepper powder to the bowl."
+    - 5:
+      tag: Timing Mistake
+      description: "The person might microwave the corn for too long or too little, which could result in overcooked or undercooked corn."
+    - 6:
+      tag: Measurement Mistake
+      description: "The person might add more or less than 1 teaspoon of salt to the bowl."
+    - 7:
+      tag: Technique Mistake
+      description: "The person might not extract the lime juice properly, resulting in too much or too little lime juice added to the bowl."
+    - 8:
+      tag: Missing Step
+      description: "The person might forget to add the lime juice to the bowl."
+    - 9:
+      tag: Technique Mistake
+      description: "The person might not mix the contents of the bowl well enough, resulting in uneven seasoning of the corn."
   required_items:
     - 0: "2 cups frozen corn"
     - 1: "1 tsp butter"
@@ -898,47 +886,65 @@
   mistake_hints:
     - 0:
       tag: Preparation Mistake
-      description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
+      description: "The person might not remove the seeds from the green chilli, which could make the dish spicier than intended."
     - 1:
-      tag: TIme Mistake
-      description: "Missing some spots while coating the ramekin, which could also lead to the egg sticking."
-    - 2:
-      tag: Tool Mistake
-      description: "Breaking the egg yolk accidentally, which could affect the desired texture of the final dish."
-    - 3:
-      tag: Other Mistake
-      description: "Getting eggshell pieces in the ramekin cup, which would be unpleasant to eat."
-    - 4:
-      tag: Temp Mistake
-      description: "Overcooking or under cooking the egg, which could result in an undesirable texture or even food safety concerns."
-    - 5:
-      tag: Object Mistake
-      description: "Forgetting to stir the egg after 30 seconds, which could lead to uneven cooking."
-    - 6:
-      tag: time Mistake
-      description: "Using too much or too little salsa or cheese, which could affect the overall taste and balance of flavors."
-    - 7:
-      tag: place Mistake
-      description: "Choosing the wrong type of salsa or cheese, which could change the intended flavor profile."
-    - 8:
-      tag: order Mistake
-      description: "Over-microwaving, which could cause the cheese to overcook or the dish to become too hot."
-    - 9:
       tag: Preparation Mistake
-      description: "Under-microwaving, resulting in only partially melted cheese."
+      description: "The person might chop the onion too finely or too coarsely, which could affect the texture of the dish."
+    - 2:
+      tag: Measurement Mistake
+      description: "The person might chop more or less than 1/2 medium onion."
+    - 3:
+      tag: Preparation Mistake
+      description: "The person might chop the tomato too finely or too coarsely, which could affect the texture of the dish."
+    - 4:
+      tag: Measurement Mistake
+      description: " The person might chop more or less than 1 medium tomato."
+    - 5:
+      tag: Preparation Mistake
+      description: "The person might not chop the coriander leaves finely enough, resulting in larger chunks in the dish."
+    - 6:
+      tag: Measurement Mistake
+      description: "The person might chop more or less than 3 tbsp of coriander leaves."
+    - 7:
+      tag: Technique Mistake
+      description: "The person might not cut the bread slices into bite-size pieces, resulting in unevenly sized pieces in the dish."
+    - 8:
+      tag: Temperature Mistake
+      description: "The person might not heat the pan to the right temperature, resulting in the ingredients not cooking properly."
+    - 9:
+      tag: Timing Mistake
+      description: "The person might not wait until the oil is hot enough before adding the jeera, resulting in the jeera not sizzling properly."
     - 10:
       tag: Preparation Mistake
-      description: "Cutting the English muffin unevenly, leading to an unstable sandwich."
+      description: "The person might not use fresh ginger and garlic to make the paste, resulting in a less flavorful dish."
     - 11:
-      tag: TIme Mistake
-      description: "Over-toasting or under-toasting the English muffin, which could affect the taste and texture."
+      tag: Measurement Mistake
+      description: "The person might add more or less than 1 teaspoon of ginger garlic paste."
     - 12:
       tag: Timing Mistake
-      description: "Placing too much or too little lettuce, which could alter the intended balance of flavors and textures."
+      description: " The person might not wait until the raw smell of the ginger garlic paste goes off before adding the tomatoes, resulting in an undercooked taste."
     - 13:
+      tag: Measurement Mistake
+      description: "The person might add more or less than 1 tsp salt, 3/4 tsp chilli powder, and/or 1/2 tsp garam masala."
+    - 14:
+      tag: Timing Mistake
+      description: "The person might not cook the masala until it leaves the pan, resulting in an undercooked taste."
+    - 15:
       tag: Preparation Mistake
-      description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
-    required_items:
+      description: "The person might not mix the ingredients evenly, resulting in uneven seasoning."
+    - 16:
+      tag: Measurement Mistake
+      description: "The person might add more or less than 3 tbsp of water."
+    - 17:
+      tag: Technique Mistake
+      description: "The person might not mix the bread and mixture gently enough, resulting in the bread getting mushy."
+    - 18:
+      tag: Missing Step
+      description: "The person might forget to turn off the stove."
+    - 19:
+      tag: Measurement Mistake
+      description: " The person might sprinkle more or less than 3 tbsp chopped coriander leaves."
+  required_items:
     - 0: "1 green chilli"
     - 1: "3 tbsp coriander"
     - 2: "2 bread slices"
@@ -1644,8 +1650,8 @@
       description: "Add the bell pepper and continue cooking, stirring often, for 2-3 minutes, until vegetables are crisp-tender."
     - 11:
       description: "Whisk the sauce again to recombine the ingredients."
-	- 12:
-	description: "Pour the sauce into the pan and cook, stirring, for 1 minute until the sauce thickens."
+    - 12:
+      description: "Pour the sauce into the pan and cook, stirring, for 1 minute until the sauce thickens."
   mistake_hints:
     - 0:
       tag: Preparation Mistake
@@ -1690,17 +1696,17 @@
       tag: Preparation Mistake
       description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
   required_items:
-	- 0: "1/6 cup water"
-	- 1: "1/8 cup soy sauce"
-	- 2: "1 tbsp honey"
-	- 3: "2 garlic cloves"
-	- 4: "1/2 tbsp minced fresh ginger"
-	- 5: "1/8 tsp black pepper"
-	- 6: "1 tsp cornstarch"
-	- 7: "2 tablespoons olive oil"
-	- 8: "8 broccoli florets"
-	- 9: "3 cremini mushrooms"
-	- 10: "1 bell pepper"
+    - 0: "1/6 cup water"
+    - 1: "1/8 cup soy sauce"
+    - 2: "1 tbsp honey"
+    - 3: "2 garlic cloves"
+    - 4: "1/2 tbsp minced fresh ginger"
+    - 5: "1/8 tsp black pepper"
+    - 6: "1 tsp cornstarch"
+    - 7: "2 tablespoons olive oil"
+    - 8: "8 broccoli florets"
+    - 9: "3 cremini mushrooms"
+    - 10: "1 bell pepper"
 - id: 25
   name: "Cheese Tomato Melt"
   category: "Veg"
@@ -1865,18 +1871,18 @@
       description: "If wet batter clings to the toothpick, microwave for an additional 5 seconds."
     - 10:
       description: "If the toothpick comes out clean, continue."
-	- 11:
-	description: "Invert the mug to release the cake onto a plate."
-	- 12:
-	description: "Allow to cool until it is no longer hot to the touch, then carefully remove the paper liner."
-	- 13:
-	description: "While the cake is cooling, prepare to pipe the frosting."
-	- 14:
-	description: "Scoop 4 spoonfuls of chocolate frosting into a zip-top bag and seal, removing as much air as possible."
-	- 15:
-	description: "Use scissors to cut one corner from the bag to create a small opening ¼-inch in diameter."
-	- 16:
-	description: "Squeeze the frosting through the opening to apply small dollops of frosting to the plate in a circle around the base of the cake."
+    - 11:
+      description: "Invert the mug to release the cake onto a plate."
+    - 12:
+      description: "Allow to cool until it is no longer hot to the touch, then carefully remove the paper liner."
+    - 13:
+      description: "While the cake is cooling, prepare to pipe the frosting."
+    - 14:
+      description: "Scoop 4 spoonfuls of chocolate frosting into a zip-top bag and seal, removing as much air as possible."
+    - 15:
+      description: "Use scissors to cut one corner from the bag to create a small opening ¼-inch in diameter."
+    - 16:
+      description: "Squeeze the frosting through the opening to apply small dollops of frosting to the plate in a circle around the base of the cake."
   mistake_hints:
     - 0:
       tag: Preparation Mistake
@@ -2026,7 +2032,7 @@
       description: "Lay out 4 large lettuce leaves, place avocado slices on each leaf, and top with the tuna mixture."
     - 7:
       description: "Roll up the lettuce wraps and serve immediately."
-   mistake_hints:
+  mistake_hints:
     - 0:
       tag: Preparation Mistake
       description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
@@ -2175,7 +2181,7 @@
       description: "Season with 1/4 tsp salt and 1/4 tsp pepper."
     - 10:
       description: "Serve immediately."
-   mistake_hints:
+  mistake_hints:
     - 0:
       tag: Preparation Mistake
       description: "Using too little or too much cooking spray, which may result in the egg sticking to the ramekin or make the egg overly greasy."
@@ -2219,24 +2225,12 @@
       tag: Preparation Mistake
       description: "Assembling the sandwich incorrectly, such as placing the egg on top of the lettuce and then the English muffin, making the sandwich difficult to eat."
   required_items:
-	- 0: "1 tbsp olive oil"
-	- 1: "1 onion"
-	- 2: "1 garlic clove"
-	- 3: "1 can (28 oz.) crushed tomatoes"
-	- 4: "1/2 cup vegetable broth"
-	- 5: "1/8 cup heavy cream"
-	- 6: "1/16 cup basil"
-	- 7: "1/4 tsp Salt"
-	- 8: "1/4 tsp pepper"
-
-
-
-
-
-
-
-
-
-
-
-
+    - 0: "1 tbsp olive oil"
+    - 1: "1 onion"
+    - 2: "1 garlic clove"
+    - 3: "1 can (28 oz.) crushed tomatoes"
+    - 4: "1/2 cup vegetable broth"
+    - 5: "1/8 cup heavy cream"
+    - 6: "1/16 cup basil"
+    - 7: "1/4 tsp Salt"
+    - 8: "1/4 tsp pepper"
