--- a/datacollection/user_app/backend/info_files/recordings/spicymasalabread.yaml
+++ b/datacollection/user_app/backend/info_files/recordings/spicymasalabread.yaml
@@ -674,7 +674,7 @@
       gets mushy
   - description: Sprinkle-Sprinkle 3 tbsp chopped coriander leaves
 - errors:
-  - description: Chop-Chop 1/2 medium onion
+  - description: Add-Add 1/2 tsp jeera to the pan
     tag: Missing Step
   - description: Add-Add 1 teaspoon of ginger garlic paste to the pan
     tag: Missing Step
@@ -685,7 +685,7 @@
   - description: Cut-Cut two slices of bread into bite-size pieces
   - description: Chop-Chop 3 tbsp coriander leaves
   - description: Chop-Chop 1 green chilli
-  - description: Add-Add 1/2 tsp jeera to the pan
+  - description: Chop-Chop 1/2 medium onion
   - description: wait-wait till jeera  sizzles on the pan
   - description: Add-Add chopped chillies and Onions to the pan
   - description: Wait-Wait until the onion turns golden
@@ -734,17 +734,17 @@
       gets mushy
   - description: Sprinkle-Sprinkle 3 tbsp chopped coriander leaves
 - errors:
-  - description: Chop-Chop 1/2 medium onion
+  - description: wait-wait till jeera  sizzles on the pan
     tag: Missing Step
   - description: Chop-Chop 3 tbsp coriander leaves
     tag: Missing Step
   recording_id: 28
   steps:
+  - description: Chop-Chop 1/2 medium onion
   - description: Chop-Chop 1 medium tomato
   - description: Heat-Heat a pan with 1 tbsp oil
   - description: Add-Add 1/2 tsp jeera to the pan
   - description: Chop-Chop 1 green chilli
-  - description: wait-wait till jeera  sizzles on the pan
   - description: Cut-Cut two slices of bread into bite-size pieces
   - description: Add-Add chopped chillies and Onions to the pan
   - description: Wait-Wait until the onion turns golden
@@ -762,7 +762,7 @@
   - description: turn-turn off the stove
   - description: mix-Gently mix the bread and mixture. Avoid overmixing as the bread
       gets mushy
-  - description: Sprinkle-Sprinkle 3 tbsp chopped coriander leaves
+  - description: Sprinkle-Sprinkle 3 tbsp coriander leaves
 - errors:
   - description: mix-Gently mix the bread and mixture. Avoid overmixing as the bread
       gets mushy
@@ -792,33 +792,6 @@
   - description: Transfer-Transfer the bread slices to the pan
   - description: turn-turn off the stove
   - description: Sprinkle-Sprinkle 3 tbsp chopped coriander leaves
-- recording_id: 30
-  steps:
-  - description: Cut-Cut two slices of bread into bite-size pieces
-  - description: Heat-Heat a pan with 1 tbsp oil
-  - description: Add-Add 1/2 tsp jeera to the pan
-  - description: Chop-Chop 1 green chilli
-  - description: Chop-Chop 1/2 medium onion
-  - description: wait-wait till jeera  sizzles on the pan
-  - description: Chop-Chop 1 medium tomato
-  - description: Add-Add chopped chillies and Onions to the pan
-  - description: Wait-Wait until the onion turns golden
-  - description: Add-Add 1 teaspoon of ginger garlic paste to the pan
-  - description: Saute-Saute until the raw smell goes off
-  - description: Add-3/4 tsp chilli powder to the pan
-  - description: Add-Add 1 tsp salt to the pan
-  - description: Add-1/2 tsp garam masala to the pan
-  - description: Add-Add chopped tomatoes to the pan
-  - description: Mix-Mix all ingredients
-  - description: cook-cook until the masala leaves the pan
-  - description: Chop-Chop 3 tbsp coriander leaves
-  - description: Pour-Pour 3 tbsp of water to the pan
-  - description: cook-cook further until water evaporates
-  - description: Transfer-Transfer the bread slices to the pan
-  - description: turn-turn off the stove
-  - description: mix-Gently mix the bread and mixture. Avoid overmixing as the bread
-      gets mushy
-  - description: Sprinkle-Sprinkle 3 tbsp chopped coriander leaves
 - errors:
   - description: Wait-Wait until the onion turns golden
     tag: Missing Step
@@ -828,7 +801,7 @@
     tag: Missing Step
   - description: cook-cook further until water evaporates
     tag: Missing Step
-  recording_id: 31
+  recording_id: 30
   steps:
   - description: Cut-Cut two slices of bread into bite-size pieces
   - description: Heat-Heat a pan with 1 tbsp oil
