--- a/datacollection/user_app/backend/info_files/recordings/gardenfreshsweetcornsalsa.yaml
+++ b/datacollection/user_app/backend/info_files/recordings/gardenfreshsweetcornsalsa.yaml
@@ -12,7 +12,7 @@
   - description: add-add it to the bowl
   - description: add-add it to the bowl
   - description: add-add it to the bowl
-  - description: cut-cut it into two pieces
+  - description: cut-cut it4 into two pieces
   - description: Slice-Slice 1/2 onion into pieces
   - description: add-add it to a bowl
   - description: add-add it to the bowl
